<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingrese"
                        android:textSize="14sp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/x1" />

                    <EditText
                        android:id="@+id/edt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="X1"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:hint="@string/x1"
                        android:inputType="numberSigned"
                        android:visibility="visible" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/y1" />

                    <EditText
                        android:id="@+id/edt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:hint="@string/y1"
                        android:inputType="numberSigned"
                        android:visibility="visible" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/x2" />

                    <EditText
                        android:id="@+id/edt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:hint="@string/x2"
                        android:inputType="numberSigned"
                        android:visibility="visible" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/y2" />

                    <EditText
                        android:id="@+id/edt4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:hint="@string/y2"
                        android:inputType="numberSigned"
                        android:visibility="visible" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnpm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pm" />

                    <Button
                        android:id="@+id/btncu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cuadra" />

                    <Button
                        android:id="@+id/btnpen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pendiente" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/c" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </TableLayout>

</LinearLayout>